<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Home Value -->
    <TextView
        android:id="@+id/home_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/home_value"
        android:text="@string/dollar_sign"/>

    <EditText
        android:id="@+id/home_value_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_value"
        android:inputType="numberDecimal"/>

    <!-- Down Payment -->
    <TextView
        android:id="@+id/down_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/down_payment"
        android:layout_below="@id/home_value_field"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/down_payment"
        android:layout_below="@id/home_value_field"
        android:text="@string/dollar_sign"/>

    <EditText
        android:id="@+id/down_payment_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/down_payment"
        android:inputType="numberDecimal"/>

    <!-- Interest Rate -->
    <TextView
        android:id="@+id/apr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apr"
        android:layout_below="@id/down_payment_field"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/apr"
        android:layout_below="@id/down_payment_field"
        android:text="@string/percent_sign"/>

    <EditText
        android:id="@+id/apr_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/apr"
        android:inputType="numberDecimal"/>

    <!-- Terms -->
    <TextView
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_below="@id/apr_field"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/terms"
        android:layout_below="@id/apr_field"
        android:text="@string/year_sign"/>

    <Spinner
        android:id="@+id/terms_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/terms_array"
        android:prompt="@string/terms_prompt"
        android:layout_below="@id/terms"/>

    <!-- Property Tax Rate -->
    <TextView
        android:id="@+id/tax_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tax_rate"
        android:layout_below="@id/terms_spinner"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/tax_rate"
        android:layout_below="@id/terms_spinner"
        android:text="@string/percent_sign"/>

    <EditText
        android:id="@+id/tax_rate_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tax_rate"
        android:inputType="numberDecimal"/>

    <!-- Calculate Button -->
    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button"
        android:layout_below="@id/tax_rate_field"
        android:layout_alignParentEnd="true"/>

    <!-- Below is result part -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/calculate_button">

        <TextView
            android:id="@+id/result_part_title"
            style="@style/result_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_part_title"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/total_tax_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_tax_paid"
            android:layout_below="@id/result_part_title"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/total_tax_paid_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_tax_paid"
            android:visibility="invisible"/>

    </RelativeLayout>

</RelativeLayout>
